feat:  creates keycloak and s3

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,19 @@
-DATABASE_URL="postgresql://bd:password@host:port/nameBd?schema=public"
+### Base de dados
+DATABASE_URL=''
+
+### Keycloak
+AUTHSERVERURL='exemplo rodando docker: http://localhost:8080/auth/realms/thiago/protocol/openid-connect/token'
+REALM=''
+CLIENTID=''
+SECRET=''
+GRANT_TYPE=''
+
+### Senha Jwt
+JWT_SECRET="JWT DO CERTIFICADO DO Keycloak"
+
+### Bucket S3
+REGION=''
+ACCESSKEYID=''
+SECRETACCESSKEY=''
+BUCKET=''
+ACL=''
