--- a/package.json
+++ b/package.json
@@ -20,15 +20,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@swc/jest": "^0.2.29",
+    "@types/multer-s3": "^3.0.1",
+    "aws-sdk": "^2.1470.0",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "keycloak-connect": "^21.1.2",
+    "multer-s3": "^3.0.1",
+    "nest-keycloak-connect": "^1.9.2",
     "nestjs-prisma": "^0.22.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -43,6 +51,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.91",
+    "@types/axios": "^0.14.0",
     "@types/chance": "^1.1.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
