--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
     "@swc/jest": "^0.2.29",
     "@types/multer-s3": "^3.0.1",
     "aws-sdk": "^2.1470.0",
@@ -34,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "keycloak-connect": "^21.1.2",
     "multer-s3": "^3.0.1",
     "nest-keycloak-connect": "^1.9.2",
@@ -47,8 +47,9 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/platform-express": "^10.2.6",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.2.6",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.91",
     "@types/axios": "^0.14.0",
